# libgpod

./: configure.ac
bindings/mono/: Makefile.am  libgpod-sharp-gtk2.sln
bindings/mono/libgpod-sharp/: libgpod-sharp.pc.in
bindings/mono/libgpod-sharp-gtk2/: Artwork.cs  Makefile.am
bindings/mono/libgpod-sharp-gtk2-test/: Makefile.am
bindings/mono/libgpod-sharp-gtk3/: Makefile.am  libgpod-sharp-gtk3.pc.in
bindings/mono/libgpod-sharp-gtk3-test/: Makefile.am  libgpod-sharp-gtk3-test.in
m4/: mono.m4
